# Patterns

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  requirements.txt
.github/workflows/: ubuntu.yml
cmake/: compile_options.cmake
package/: CMakeLists.txt
package/app/: CMakeLists.txt
package/app/src/: main.cpp
package/factory/: CMakeLists.txt
package/factory/include/: factory.h
package/factory/src/: factory.cpp
package/singleton/: CMakeLists.txt
package/singleton/include/: singleton.h
scripts/: check_and_test.sh
test/factory/: CMakeLists.txt  factory_test.cpp
